--- a/httpd.conf
+++ b/httpd.conf
@@ -1,5 +1,5 @@
 <Directory />
-    Options +Indexes FollowSymLinks MultiViews
+    Options FollowSymLinks MultiViews
     AllowOverride All
     Order allow,deny
     allow from all
