--- a/.htaccess
+++ b/.htaccess
@@ -5,4 +5,5 @@
  RewriteCond %{HTTPS} off
  RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [R,L]
  Options +Indexes
+ IndexOptions IgnoreCase FancyIndexing FoldersFirst NameWidth=* DescriptionWidth=* SuppressHTMLPreamble
  # END SYSTEM HTTPS SETTING
